2009-08-06  Araki Ken  <arakiken@users.sf.net>

	* Added imlib2 support(experimental).
	  (Thanks to Frederic Heulin).

	* x_window.c(x_window_receive_event,MotionNotify):
	  Check if button is pressed before win->button_motion is called.
	  (Thanks to shirai hideyuki)

2009-07-29  Araki Ken  <arakiken@users.sf.net>

	* Added: win32/mlterm-win32.bat.

	* README, README.win32: Modified.
	
	* kiklib/src/kik_conf_io.c: kik_get_sys_rc_path() returns SYSCONFDIR\mlterm and
	  kik_get_user_rc_path() returns %HOMEPATH%\mlterm in win32.

	* kiklib/src/kik_util.c: Added kik_getuid() and kik_getgid().

	* x_window_win32.c: win->is_scrollable is 0 in WM_KILLFOCUS and 1 in WM_SETFOCUS.

2009-07-26  Araki Ken  <arakiken@users.sf.net>

	* x_display_win32.c: Implemented x_get_opened_displays().
	  (Could be core dumped in time_proc(x_term_manager.c) without this modification.)

2009-07-26  Araki Ken  <arakiken@users.sf.net>

	* IME Window pursues cursor position.

	* Added: doc/ja/README.win32.

	* Supported multiple pty, startup options and configuration by 'main' file in win32.
	  x_term_manager.[ch], main.[ch] and x_main_config.[ch] are built in win32.
	  x_window_manager*.[ch] are removed and united to x_display*.[ch].
	  Removed: main_win32.c
	  Added: x_display_win32.c
	
	* Ucs property table is separated from libmkf as a shared library.
	  Added: mkf/libtbl/mkf_ucs_property.c and libmkf_ucsprop.la.
	  Moved: mkf/lib/table/mkf_ucs_*_property.table to mkf/libtbl/table/
	  Renamed: mkf/lib/mkf_map_loader.h to mkf_tblfunc_loader.h

	* kik_debug.h: Use __FILE__:__LINE__ instead of __FUNCTION__.
	
2009-07-17  Araki Ken  <arakiken@users.sf.net>

	* libtool: version up to 1.5.26
	  autoconf: version up to 2.63
	  (for win32 compilation.)
	
	* Separated mkf table from mkf as dynamic shared library(LIBDIR/mkf/libmkf_*.so).
	  (Added configure option --enable(disable)-dl-table)
	
	* Added scrollbar support in win32.
	  (Added x_simple_sb_view_win32.c)
